--- a/cyclope/apps/contacts/templates/contacts/contact_labeled_icon.html
+++ b/cyclope/apps/contacts/templates/contacts/contact_labeled_icon.html
@@ -4,10 +4,11 @@
     <a href="{% url contact-detail contact.slug %}">
       {% if contact.photo %}
       <img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/contact.png"/>
-      <img src="{% version contact.photo.path 'thumbnail' %}" width="124" />
+      <img class="icon" src="{% version contact.photo.path 'thumbnail' %}" />
       {% else %}
-      <div class="crop_container"><img class="icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/contact-medium.png"/></div>
+      <img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/contact.png" border="0"/>
+        <img class="icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/not-available.png" border="0"/>
       {% endif %}
     </a>
-    <span class="label"><a href="{% url contact-detail contact.slug %}">{{ contact.name|truncatechars:40 }}</a></span>
+    <h2 class="title"><a href="{% url contact-detail contact.slug %}">{{ contact.name|truncatechars:40 }}</a></h2>
   </div>
