--- a/cyclope/apps/medialibrary/templates/medialibrary/movieclip_labeled_icon.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/movieclip_labeled_icon.html
@@ -4,11 +4,12 @@
     <a href="{% url movieclip-detail movieclip.slug %}">
       {% if movieclip.still %}
       <img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/video.png"/>
-      <div class="crop_container"><img src="{% version movieclip.still.path 'thumbnail' %}" width="124" /></div>
+      <img class="icon" src="{% version movieclip.still.path 'thumbnail' %}"/>
       {% else %}
-      <div class="crop_container"><img class="icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/video-medium.png"/></div>
+        <img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/video.png" border="0"/>
+        <img class="icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/not-available.png" border="0"/>
       {% endif %}
 
     </a>
-    <span class="label"><a href="{% url movieclip-detail movieclip.slug %}">{{ movieclip.name|truncatechars:40 }}</a></span>
+    <h2 class="title"><a href="{% url movieclip-detail movieclip.slug %}">{{ movieclip.name|truncatechars:40 }}</a></h2>
   </div>
