--- a/cyclope/apps/medialibrary/templates/medialibrary/externalcontent_labeled_icon.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/externalcontent_labeled_icon.html
@@ -4,15 +4,16 @@
       <a href="{% if externalcontent.skip_detail %}{{ externalcontent.content_url }}{% else %} {% url externalcontent-detail externalcontent.slug %}{% endif%}" {% if externalcontent.new_window %}target="_blank"{% endif%}>
       {% if externalcontent.image %}
       <img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/external.png"/>
-      <img src="{% version externalcontent.image.path 'thumbnail' %}" width="124" />
+      <img class="icon" src="{% version externalcontent.image.path 'thumbnail' %}" />
       {% else %}
-      <div class="crop_container"><img class="icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/external-medium.png"/></div>
+        <img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/external.png" border="0"/>
+        <img class="icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/not-available.png" border="0"/>
       {% endif %}
 
     </a>
-    <span class="label">
+    <h2 class="title">
       <a href="{% if externalcontent.skip_detail %}{{ externalcontent.content_url }}{% else %} {% url externalcontent-detail externalcontent.slug %}{% endif%}" {% if externalcontent.new_window %}target="_blank"{% endif%}>
       {{ externalcontent.name }}
     </a>
-    </span>
+    </h2>
   </div>
