--- a/cyclope/apps/medialibrary/templates/medialibrary/picture_labeled_icon.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/picture_labeled_icon.html
@@ -3,7 +3,7 @@
   <div class="content-view media labeled_icon picture">
     <a href="{% url picture-detail picture.slug %}">
       <img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/image.png"/>
-      <div class="crop_container"><img class="icon" src="{% version picture.image.path 'thumbnail' %}" width="124" /></div>
+      <img class="icon" src="{% version picture.image.path 'thumbnail' %}" />
     </a>
-    <span class="label"><a href="{% url picture-detail picture.slug %}">{{ picture.name|truncatechars:40 }}</a></span>
+    <h2 class="title"><a href="{% url picture-detail picture.slug %}">{{ picture.name|truncatechars:40 }}</a></h2>
   </div>
