--- a/cyclope/apps/medialibrary/templates/medialibrary/regularfile_labeled_icon.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/regularfile_labeled_icon.html
@@ -4,11 +4,12 @@
     <a href="{% url regularfile-detail regularfile.slug %}">
       {% if regularfile.image %}
       <img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/regularfile.png"/>
-      <img src="{% version regularfile.image.path 'thumbnail' %}" width="124" />
+      <img class="icon" src="{% version regularfile.image.path 'thumbnail' %}"/>
       {% else %}
-      <div class="crop_container"><img class="icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/regularfile-medium.png"/></div>
+      <img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/regularfile.png" border="0"/>
+        <img class="icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/not-available.png" border="0"/>
       {% endif %}
 
     </a>
-    <span class="label"><a href="{% url regularfile-detail regularfile.slug %}">{{ regularfile.name|truncatechars:40 }}</a></span>
+    <h2 class="title"><a href="{% url regularfile-detail regularfile.slug %}">{{ regularfile.name|truncatechars:40 }}</a></h2>
   </div>
