--- a/cyclope/apps/staticpages/templates/staticpages/staticpage_labeled_icon.html
+++ b/cyclope/apps/staticpages/templates/staticpages/staticpage_labeled_icon.html
@@ -4,11 +4,12 @@
     <a href="{% url staticpage-detail staticpage.slug %}">
       {% if staticpage.image %}
       <img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/staticpage.png"/>
-      <img src="{% version staticpage.image.path 'thumbnail' %}"/>
+      <img class="icon" src="{% version staticpage.image.path 'thumbnail' %}"/>
       {% else %}
-      <img class="icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/staticpage.png"/>
+       <img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/staticpage.png" border="0"/>
+        <img class="icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/not-available.png" border="0"/>
       {% endif %}
 
     </a>
-    <span class="label"><a href="{% url staticpage-detail staticpage.slug %}">{{ staticpage.name|truncatechars:40 }}</a></span>
+    <h2 class="title"><a href="{% url staticpage-detail staticpage.slug %}">{{ staticpage.name|truncatechars:40 }}</a></h2>
   </div>
