--- a/cyclope/core/collections/templates/collections/collection_root_categories_teaser_list.html
+++ b/cyclope/core/collections/templates/collections/collection_root_categories_teaser_list.html
@@ -18,9 +18,9 @@
       {% endif %}
 
       {% if category.description %}
-      <h3 class="summary">
+      <div class="summary">
         {{ category.description|smart_style }}
-      </h3>
+      </div>
       {% endif %}
 
 
