--- a/cyclope/templates/cyclope/themes/neutrona/one_sidebar.html
+++ b/cyclope/templates/cyclope/themes/neutrona/one_sidebar.html
@@ -6,7 +6,7 @@
 
 {% block page_content %}
 
-<div id="fuego-content" class="grid_19">
+<div id="fuego" class="grid_19">
   {% region 'before_content' %}
   {% block content %} {% endblock %}
   {% region 'after_content' %}
